--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 *.so
 *.dylib
 
+# env files
+.env*
+
 # Test binary, built with `go test -c`
 *.test
 
@@ -19,3 +22,9 @@
 
 # Go workspace file
 go.work
+
+# Generated code
+/entity/*
+
+!/entity/generate.go
+!/entity/schema/
